potential bug fix for account filters dropdown in posts template on iphone

--- a/static/core/css/wikivinci.css
+++ b/static/core/css/wikivinci.css
@@ -966,6 +966,7 @@ h6 {
 }
 
 #page-content #all-posts-filters {
+	z-index:1;
 	padding-top:40px;
 	float:left;
 	width:20%;
